--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,19 +18,6 @@ jobs:
           cache: "npm"
       - run: npm ci
 
-  Deploy-Production:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=prolog --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
-
   lint:
     runs-on: ubuntu-latest
     needs: install
@@ -87,3 +74,17 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           start: npm start
+
+Deploy-Production:
+  runs-on: ubuntu-latest
+  needs: e2e
+  steps:
+    - uses: actions/checkout@v2
+    - name: Install Vercel CLI
+      run: npm install --global vercel@latest
+    - name: Pull Vercel Environment Information
+      run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+    - name: Build Project Artifacts
+      run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+    - name: Deploy Project Artifacts to Vercel
+      run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
