--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -74,8 +74,9 @@ jobs:
         with:
           start: npm start
 
- Deploy-Preview:
+  Deploy-Preview:
     runs-on: ubuntu-latest
+    needs: e2e
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
